--- a/order.html
+++ b/order.html
@@ -46,10 +46,10 @@
             </div>
             <div class="image-container">
                 <div class="image-item">
-                    <img src="images/image_5.png" alt="MEDIUM MEAL">
+                    <img src="images_small/image_5-min.png" alt="MEDIUM MEAL">
                 </div>
                 <div class="image-item">
-                    <img src="images/image_large.png" alt="MEDIUM MEAL">
+                    <img src="images_small/image_large-min.png" alt="MEDIUM MEAL">
                 </div>
             </div>
 
