image loading optimisations

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link href='https://fonts.googleapis.com/css?family=Fragment Mono' rel='stylesheet'>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0" />
+
+    <link rel="preload" as="image" href="images_webp/small/image_1-min.webp" type="image/webp">
+    <link rel="preload" as="image" href="images_webp/small/image_2-min.webp" type="image/webp">
+    <link rel="preload" as="image" href="images_webp/small/image_3-min.webp" type="image/webp">
+    <link rel="preload" as="image" href="images_webp/small/image_4-min.webp" type="image/webp">
 </head>
 
 <body>
@@ -50,14 +55,38 @@
         </div>
         <div class="centered-div-wide">
             <div class="image-grid">
-                <img src="images_small/image_1-min.png" alt="Image 1" loading="lazy">
-                <img src="images_small/image_2-min.png" alt="Image 2" loading="lazy">
-                <img src="images_small/image_3-min.png" alt="Image 3" loading="lazy">
-                <img src="images_small/image_4-min.png" alt="Image 4" loading="lazy">
-                <img src="images_small/image_5-min.png" alt="Image 5" loading="lazy">
-                <img src="images_small/image_6-min.png" alt="Image 6" loading="lazy">
-                <img src="images_small/image_7-min.png" alt="Image 7" loading="lazy">
-                <img src="images_small/image_8-min.png" alt="Image 8" loading="lazy">
+                <picture>
+                    <source srcset="images_webp/small/image_1-min.webp" type="image/webp">
+                    <img src="images_small/image_1-min.png" alt="Image 1" loading="lazy">
+                </picture>
+                <picture>
+                    <source srcset="images_webp/small/image_2-min.webp" type="image/webp">
+                    <img src="images_small/image_2-min.png" alt="Image 2" loading="lazy">
+                </picture>
+                <picture>
+                    <source srcset="images_webp/small/image_3-min.webp" type="image/webp">
+                    <img src="images_small/image_3-min.png" alt="Image 3" loading="lazy">
+                </picture>
+                <picture>
+                    <source srcset="images_webp/small/image_4-min.webp" type="image/webp">
+                    <img src="images_small/image_4-min.png" alt="Image 4" loading="lazy">
+                </picture>
+                <picture>
+                    <source srcset="images_webp/small/image_5-min.webp" type="image/webp">
+                    <img src="images_small/image_5-min.png" alt="Image 5" loading="lazy">
+                </picture>
+                <picture>
+                    <source srcset="images_webp/small/image_6-min.webp" type="image/webp">
+                    <img src="images_small/image_6-min.png" alt="Image 6" loading="lazy">
+                </picture>
+                <picture>
+                    <source srcset="images_webp/small/image_7-min.webp" type="image/webp">
+                    <img src="images_small/image_7-min.png" alt="Image 7" loading="lazy">
+                </picture>
+                <picture>
+                    <source srcset="images_webp/small/image_8-min.webp" type="image/webp">
+                    <img src="images_small/image_8-min.png" alt="Image 8" loading="lazy">
+                </picture>
             </div>
         </div>
         <br>
@@ -159,7 +188,10 @@
                     <p><span style="font-size: 12px;">We respect your privacy.</span></p>
                     <br><br><br><br>
                     <div class="flex-container">
-                        <img src="images_small/image_1-min.png" alt="Image 1" loading="lazy">
+                        <picture>
+                            <source srcset="images_webp/small/image_1-min.webp" type="image/webp">
+                            <img src="images_small/image_1-min.png" alt="Image 1" loading="lazy">
+                        </picture>
                     </div>
                     <br><br><br><br><br><br>
                 </div>
