--- a/menu.html
+++ b/menu.html
@@ -9,6 +9,9 @@
     <link href='https://fonts.googleapis.com/css?family=Fragment Mono' rel='stylesheet'>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0" />
+
+    <link rel="preload" as="image" href="images_webp/small/image_4-min.webp" type="image/webp">
+    <link rel="preload" as="image" href="images_webp/small/image_5-min.webp" type="image/webp">
 </head>
 
 <body>
@@ -51,28 +54,40 @@
         <div class="menu-center">
             <div class="grid-container">
                 <div class="grid-item">
-                    <img src="images_small/image_4-min.png" alt="KING PRAWN PASTA" loading="lazy">
+                    <picture>
+                        <source srcset="images_webp/small/image_4-min.webp" type="image/webp">
+                        <img src="images_small/image_4-min.png" alt="KING PRAWN PASTA" loading="lazy">
+                    </picture>
                     <h2>KING PRAWN PASTA</h2>
                     <p>King prawns with a garlic, lemon and parsley sauce, paired with fresh tomatoes.<br><br>
                         Medium: 476cals 30g protein 62g carbs 10g fat<br><br>
                         Large: 714cals 44g protein 93g carbs 15g fat</p>
                 </div>
                 <div class="grid-item">
-                    <img src="images_small/image_5-min.png" alt="JERK CHICKEN" loading="lazy">
+                    <picture>
+                        <source srcset="images_webp/small/image_5-min.webp" type="image/webp">
+                        <img src="images_small/image_5-min.png" alt="JERK CHICKEN" loading="lazy">
+                    </picture>
                     <h2>JERK CHICKEN</h2>
                     <p>Marinated chicken breast with jerk sauce, paired with coconut rice, kidney beans, peas.<br><br>
                         Medium: 673cals 43g protein 79g carbs 18g fat<br><br>
                         Large: 1010cals 65g protein 118g carbs 27g fat</p>
                 </div>
                 <div class="grid-item">
-                    <img src="images_small/image_3-min.png" alt="BEEF BOLOGNESE" loading="lazy">
+                    <picture>
+                        <source srcset="images_webp/small/image_3-min.webp" type="image/webp">
+                        <img src="images_small/image_3-min.png" alt="BEEF BOLOGNESE" loading="lazy">
+                    </picture>
                     <h2>BEEF BOLOGNESE</h2>
                     <p>Beef Bolognese, topped with grated parmesan, paired with spinach.<br><br>
                         Medium: 584cals 37g protein 63g carbs 18g fat<br><br>
                         Large: 876cals 55g protein 94g carbs 27g fat</p>
                 </div>
                 <div class="grid-item">
-                    <img src="images_small/image_6-min.png" alt="BEEF LASAGNE" loading="lazy">
+                    <picture>
+                        <source srcset="images_webp/small/image_6-min.webp" type="image/webp">
+                        <img src="images_small/image_6-min.png" alt="BEEF LASAGNE" loading="lazy">
+                    </picture>
                     <h2>BEEF LASAGNE</h2>
                     <p>Traditional lasagne, filled with slow cooked beef, paired with broccoli (image due to
                         change).<br><br>
@@ -80,28 +95,40 @@
                         Large: 725cals 52g protein 41g carbs 36 fat</p>
                 </div>
                 <div class="grid-item">
-                    <img src="images_small/image_2-min.png" alt="MEDITERRANEAN COD" loading="lazy">
+                    <picture>
+                        <source srcset="images_webp/small/image_2-min.webp" type="image/webp">
+                        <img src="images_small/image_2-min.png" alt="MEDITERRANEAN COD" loading="lazy">
+                    </picture>
                     <h2>MEDITERRANEAN COD</h2>
                     <p>Baked cod fillet with a pesto marinade, paired with spinach rice and fresh tomatoes.<br><br>
                         Medium: 469cals 30g protein 62g carbs 10g fat<br><br>
                         Large: 703cals 45g protein 92g carbs 14g fat</p>
                 </div>
                 <div class="grid-item">
-                    <img src="images_small/image_8-min.png" alt="CHICKEN TIKKA MASALA" loading="lazy">
+                    <picture>
+                        <source srcset="images_webp/small/image_8-min.webp" type="image/webp">
+                        <img src="images_small/image_8-min.png" alt="CHICKEN TIKKA MASALA" loading="lazy">
+                    </picture>
                     <h2>CHICKEN TIKKA MASALA</h2>
                     <p>Marinated chicken breast with tikka masala sauce, paired with pilau rice and spinach.<br><br>
                         Medium: 691cals 42g protein 68g carbs 25g fat<br><br>
                         Large: 1037cals 63g protein 102g carbs 38g fat</p>
                 </div>
                 <div class="grid-item">
-                    <img src="images_small/image_7-min.png" alt="CHICKEN SHAWARMA" loading="lazy">
+                    <picture>
+                        <source srcset="images_webp/small/image_7-min.webp" type="image/webp">
+                        <img src="images_small/image_7-min.png" alt="CHICKEN SHAWARMA" loading="lazy">
+                    </picture>
                     <h2>CHICKEN SHAWARMA</h2>
                     <p>Marinated chicken breast with garlic sauce, paired with lentil rice and peas.<br><br>
                         Medium: 711cals 48g protein 76g carbs 20g fat<br><br>
                         Large: 1066cals 71g protein 114g carbs 29g fat</p>
                 </div>
                 <div class="grid-item">
-                    <img src="images_small/image_1-min.png" alt="CHICKEN BURRITO BOWL" loading="lazy">
+                    <picture>
+                        <source srcset="images_webp/small/image_1-min.webp" type="image/webp">
+                        <img src="images_small/image_1-min.png" alt="CHICKEN BURRITO BOWL" loading="lazy">
+                    </picture>
                     <h2>CHICKEN BURRITO BOWL</h2>
                     <p>Marinated chicken breast with sour cream, paired with coriander rice, black beans and fresh
                         tomatoes (image due to change).<br><br>
