--- a/order.html
+++ b/order.html
@@ -9,6 +9,9 @@
     <link href='https://fonts.googleapis.com/css?family=Fragment Mono' rel='stylesheet'>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0" />
+
+    <link rel="preload" as="image" href="images_webp/small/image_5-min.webp" type="image/webp">
+    <link rel="preload" as="image" href="images_webp/small/image_large-min.webp" type="image/webp">
 </head>
 
 <body>
@@ -46,10 +49,16 @@
             </div>
             <div class="image-container">
                 <div class="image-item">
-                    <img src="images_small/image_5-min.png" alt="MEDIUM MEAL">
+                    <picture>
+                        <source srcset="images_webp/small/image_5-min.webp" type="image/webp">
+                        <img src="images_small/image_5-min.png" alt="MEDIUM MEAL">
+                    </picture>
                 </div>
                 <div class="image-item">
-                    <img src="images_small/image_large-min.png" alt="MEDIUM MEAL">
+                    <picture>
+                        <source srcset="images_webp/small/image_large-min.webp" type="image/webp">
+                        <img src="images_small/image_large-min.png" alt="MEDIUM MEAL">
+                    </picture>
                 </div>
             </div>
 
