--- a/index.html
+++ b/index.html
@@ -56,35 +56,67 @@
         <div class="centered-div-wide">
             <div class="image-grid">
                 <picture>
-                    <source srcset="images_webp/small/image_1-min.webp" type="image/webp">
+                    <source srcset="images_webp/small/image_1-min.webp 400w,
+                                     images_webp/medium/image_1-min.webp 800w,
+                                     images_webp/large/image_1-min.webp 1200w"
+                            sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 25vw"
+                            type="image/webp">
                     <img src="images_small/image_1-min.png" alt="Image 1" loading="lazy">
                 </picture>
                 <picture>
-                    <source srcset="images_webp/small/image_2-min.webp" type="image/webp">
+                    <source srcset="images_webp/small/image_2-min.webp 400w,
+                                     images_webp/medium/image_2-min.webp 800w,
+                                     images_webp/large/image_2-min.webp 1200w"
+                            sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 25vw"
+                            type="image/webp">
                     <img src="images_small/image_2-min.png" alt="Image 2" loading="lazy">
                 </picture>
                 <picture>
-                    <source srcset="images_webp/small/image_3-min.webp" type="image/webp">
+                    <source srcset="images_webp/small/image_3-min.webp 400w,
+                                     images_webp/medium/image_3-min.webp 800w,
+                                     images_webp/large/image_3-min.webp 1200w"
+                            sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 25vw"
+                            type="image/webp">
                     <img src="images_small/image_3-min.png" alt="Image 3" loading="lazy">
                 </picture>
                 <picture>
-                    <source srcset="images_webp/small/image_4-min.webp" type="image/webp">
+                    <source srcset="images_webp/small/image_4-min.webp 400w,
+                                     images_webp/medium/image_4-min.webp 800w,
+                                     images_webp/large/image_4-min.webp 1200w"
+                            sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 25vw"
+                            type="image/webp">
                     <img src="images_small/image_4-min.png" alt="Image 4" loading="lazy">
                 </picture>
                 <picture>
-                    <source srcset="images_webp/small/image_5-min.webp" type="image/webp">
+                    <source srcset="images_webp/small/image_5-min.webp 400w,
+                                     images_webp/medium/image_5-min.webp 800w,
+                                     images_webp/large/image_5-min.webp 1200w"
+                            sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 25vw"
+                            type="image/webp">
                     <img src="images_small/image_5-min.png" alt="Image 5" loading="lazy">
                 </picture>
                 <picture>
-                    <source srcset="images_webp/small/image_6-min.webp" type="image/webp">
+                    <source srcset="images_webp/small/image_6-min.webp 400w,
+                                     images_webp/medium/image_6-min.webp 800w,
+                                     images_webp/large/image_6-min.webp 1200w"
+                            sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 25vw"
+                            type="image/webp">
                     <img src="images_small/image_6-min.png" alt="Image 6" loading="lazy">
                 </picture>
                 <picture>
-                    <source srcset="images_webp/small/image_7-min.webp" type="image/webp">
+                    <source srcset="images_webp/small/image_7-min.webp 400w,
+                                     images_webp/medium/image_7-min.webp 800w,
+                                     images_webp/large/image_7-min.webp 1200w"
+                            sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 25vw"
+                            type="image/webp">
                     <img src="images_small/image_7-min.png" alt="Image 7" loading="lazy">
                 </picture>
                 <picture>
-                    <source srcset="images_webp/small/image_8-min.webp" type="image/webp">
+                    <source srcset="images_webp/small/image_8-min.webp 400w,
+                                     images_webp/medium/image_8-min.webp 800w,
+                                     images_webp/large/image_8-min.webp 1200w"
+                            sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 25vw"
+                            type="image/webp">
                     <img src="images_small/image_8-min.png" alt="Image 8" loading="lazy">
                 </picture>
             </div>
@@ -189,7 +221,11 @@
                     <br><br><br><br>
                     <div class="flex-container">
                         <picture>
-                            <source srcset="images_webp/small/image_1-min.webp" type="image/webp">
+                            <source srcset="images_webp/small/image_1-min.webp 400w,
+                                             images_webp/medium/image_1-min.webp 800w,
+                                             images_webp/large/image_1-min.webp 1200w"
+                                    sizes="(max-width: 640px) 100vw, 200px"
+                                    type="image/webp">
                             <img src="images_small/image_1-min.png" alt="Image 1" loading="lazy">
                         </picture>
                     </div>
