--- a/menu.html
+++ b/menu.html
@@ -55,7 +55,11 @@
             <div class="grid-container">
                 <div class="grid-item">
                     <picture>
-                        <source srcset="images_webp/small/image_4-min.webp" type="image/webp">
+                        <source srcset="images_webp/small/image_4-min.webp 400w,
+                                         images_webp/medium/image_4-min.webp 800w,
+                                         images_webp/large/image_4-min.webp 1200w"
+                                sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw"
+                                type="image/webp">
                         <img src="images_small/image_4-min.png" alt="KING PRAWN PASTA" loading="lazy">
                     </picture>
                     <h2>KING PRAWN PASTA</h2>
@@ -65,7 +69,11 @@
                 </div>
                 <div class="grid-item">
                     <picture>
-                        <source srcset="images_webp/small/image_5-min.webp" type="image/webp">
+                        <source srcset="images_webp/small/image_5-min.webp 400w,
+                                         images_webp/medium/image_5-min.webp 800w,
+                                         images_webp/large/image_5-min.webp 1200w"
+                                sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw"
+                                type="image/webp">
                         <img src="images_small/image_5-min.png" alt="JERK CHICKEN" loading="lazy">
                     </picture>
                     <h2>JERK CHICKEN</h2>
@@ -75,7 +83,11 @@
                 </div>
                 <div class="grid-item">
                     <picture>
-                        <source srcset="images_webp/small/image_3-min.webp" type="image/webp">
+                        <source srcset="images_webp/small/image_3-min.webp 400w,
+                                         images_webp/medium/image_3-min.webp 800w,
+                                         images_webp/large/image_3-min.webp 1200w"
+                                sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw"
+                                type="image/webp">
                         <img src="images_small/image_3-min.png" alt="BEEF BOLOGNESE" loading="lazy">
                     </picture>
                     <h2>BEEF BOLOGNESE</h2>
@@ -85,7 +97,11 @@
                 </div>
                 <div class="grid-item">
                     <picture>
-                        <source srcset="images_webp/small/image_6-min.webp" type="image/webp">
+                        <source srcset="images_webp/small/image_6-min.webp 400w,
+                                         images_webp/medium/image_6-min.webp 800w,
+                                         images_webp/large/image_6-min.webp 1200w"
+                                sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw"
+                                type="image/webp">
                         <img src="images_small/image_6-min.png" alt="BEEF LASAGNE" loading="lazy">
                     </picture>
                     <h2>BEEF LASAGNE</h2>
@@ -96,7 +112,11 @@
                 </div>
                 <div class="grid-item">
                     <picture>
-                        <source srcset="images_webp/small/image_2-min.webp" type="image/webp">
+                        <source srcset="images_webp/small/image_2-min.webp 400w,
+                                         images_webp/medium/image_2-min.webp 800w,
+                                         images_webp/large/image_2-min.webp 1200w"
+                                sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw"
+                                type="image/webp">
                         <img src="images_small/image_2-min.png" alt="MEDITERRANEAN COD" loading="lazy">
                     </picture>
                     <h2>MEDITERRANEAN COD</h2>
@@ -106,7 +126,11 @@
                 </div>
                 <div class="grid-item">
                     <picture>
-                        <source srcset="images_webp/small/image_8-min.webp" type="image/webp">
+                        <source srcset="images_webp/small/image_8-min.webp 400w,
+                                         images_webp/medium/image_8-min.webp 800w,
+                                         images_webp/large/image_8-min.webp 1200w"
+                                sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw"
+                                type="image/webp">
                         <img src="images_small/image_8-min.png" alt="CHICKEN TIKKA MASALA" loading="lazy">
                     </picture>
                     <h2>CHICKEN TIKKA MASALA</h2>
@@ -116,7 +140,11 @@
                 </div>
                 <div class="grid-item">
                     <picture>
-                        <source srcset="images_webp/small/image_7-min.webp" type="image/webp">
+                        <source srcset="images_webp/small/image_7-min.webp 400w,
+                                         images_webp/medium/image_7-min.webp 800w,
+                                         images_webp/large/image_7-min.webp 1200w"
+                                sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw"
+                                type="image/webp">
                         <img src="images_small/image_7-min.png" alt="CHICKEN SHAWARMA" loading="lazy">
                     </picture>
                     <h2>CHICKEN SHAWARMA</h2>
@@ -126,7 +154,11 @@
                 </div>
                 <div class="grid-item">
                     <picture>
-                        <source srcset="images_webp/small/image_1-min.webp" type="image/webp">
+                        <source srcset="images_webp/small/image_1-min.webp 400w,
+                                         images_webp/medium/image_1-min.webp 800w,
+                                         images_webp/large/image_1-min.webp 1200w"
+                                sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw"
+                                type="image/webp">
                         <img src="images_small/image_1-min.png" alt="CHICKEN BURRITO BOWL" loading="lazy">
                     </picture>
                     <h2>CHICKEN BURRITO BOWL</h2>
