--- a/order.html
+++ b/order.html
@@ -50,14 +50,22 @@
             <div class="image-container">
                 <div class="image-item">
                     <picture>
-                        <source srcset="images_webp/small/image_5-min.webp" type="image/webp">
+                        <source srcset="images_webp/small/image_5-min.webp 400w,
+                                         images_webp/medium/image_5-min.webp 800w,
+                                         images_webp/large/image_5-min.webp 1200w"
+                                sizes="(max-width: 640px) 100vw, 50vw"
+                                type="image/webp">
                         <img src="images_small/image_5-min.png" alt="MEDIUM MEAL">
                     </picture>
                 </div>
                 <div class="image-item">
                     <picture>
-                        <source srcset="images_webp/small/image_large-min.webp" type="image/webp">
-                        <img src="images_small/image_large-min.png" alt="MEDIUM MEAL">
+                        <source srcset="images_webp/small/image_large-min.webp 400w,
+                                         images_webp/medium/image_large-min.webp 800w,
+                                         images_webp/large/image_large-min.webp 1200w"
+                                sizes="(max-width: 640px) 100vw, 50vw"
+                                type="image/webp">
+                        <img src="images_small/image_large-min.png" alt="LARGE MEAL">
                     </picture>
                 </div>
             </div>
